--- a/_pgbackup/index_1625927852.html
+++ b/_pgbackup/index_1625927852.html
@@ -63,31 +63,32 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img class="first-slide" src="assets/images/3.jpg" alt="First slide">
+                    <img class="first-slide" src="http://pinegrow.com/placeholders/img4.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>Gogoasa SMP</h1>
-                            <h1></h1>
-                            <p>Bun venit pe site-ul SMP-ului gogoasa.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button" target="_pg_blank">Informatii</a></p>
+                            <h1>Example headline.</h1>
+                            <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="second-slide" src="assets/images/1.jpg" alt="Second slide">
+                    <img class="second-slide" src="http://pinegrow.com/placeholders/img3.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Another example headline.</h1>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p></p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img class="third-slide" src="assets/images/2.jpg" alt="Third slide">
+                    <img class="third-slide" src="http://pinegrow.com/placeholders/img8.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <p></p>
+                            <h1>One more for good measure.</h1>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
                         </div>
                     </div>
                 </div>
