--- a/_pgbackup/index_1625940125.html
+++ b/_pgbackup/index_1625940125.html
@@ -69,7 +69,7 @@
                             <h1>Gogoasa SMP</h1>
                             <h1></h1>
                             <p>Bun venit pe site-ul SMP-ului gogoasa.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#" role="button" target="_pg_blank">Informatii</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="carousel-caption">
                             <h1>Another example headline.</h1>
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                            <p></p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,9 @@
                     <img class="third-slide" src="assets/images/2.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <p></p>
+                            <h1>One more for good measure.</h1>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
                         </div>
                     </div>
                 </div>
