--- a/_pgbackup/index_1626633421.html
+++ b/_pgbackup/index_1626633421.html
@@ -21,15 +21,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="active-tile" data-pg-ia='{"l":[{"name":"MoveTile","trg":"no","a":{"l":[{"t":"$.active-tile","l":[{"t":"tween","p":0,"d":0.28,"l":{"pgPos":{"pos":"center","width":104,"tsel":"^nav|.nav-item.active a"}}}]}]},"rstr":"true"}]}'></div>
                     <ul class="navbar-nav" style="z-index: 1; position: relative;">
                         <li class="nav-item">
-                            <a class="nav-link" href="#hero" data-pg-ia='{"l":[{"name":"ScrollOnClick","trg":"click","a":{"l":[{"t":"^body","l":[{"t":"tween","p":0,"d":0.59,"l":{"scrollTo":{"dest":"${target.href}"}}},{"t":"tween","p":0,"d":0.59,"l":{"history.push":"${target.href}"},"m":true}]},{"t":"","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MakeActive"}}}]},{"t":"^nav|.active-tile","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MoveTile"}}}]}]},"pdef":"true"},{"name":"MakeActive","trg":"no","a":{"l":[{"t":"^nav|.nav-item.active","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"active"}}]},{"t":"^.nav-item","l":[{"t":"tween","p":0,"d":0.05,"l":{"class.add":"active"}}]},{"t":"this","l":[{"t":"tween","p":0,"d":0.5,"l":{"color":"#f500db"}}],"m":true}]},"rcr":"true"},{"name":"PlayMoveTile","trg":"no","a":{"l":[{"t":"^nav|.active-tile","l":[{"t":"tween","p":0.1,"d":0.4,"l":{"pgia":{"play":"MoveTile"}}}]}]},"rstr":"true"}]}' data-pg-ia-apply="^nav|a[href^=&quot;#&quot;]">Home</a>
-                        </li>
+</li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section1" target="_pg_blank">Download</a>
-                            <a class="nav-link" href="#section1" target="_pg_blank"></a>
-                        </li>
+</li>
                         <li class="nav-item">
 </li>
                         <li class="nav-item">
@@ -40,29 +36,25 @@
 </li>
                     </ul>
                 </div>
+                <div class="active-tile" data-pg-ia='{"l":[{"name":"MoveTile","trg":"no","a":{"l":[{"t":"$.active-tile","l":[{"t":"tween","p":0,"d":0.28,"l":{"pgPos":{"pos":"center","width":104,"tsel":"^nav|.nav-item.active a"}}}]}]},"rstr":"true"}]}'></div>
             </nav>
         </header>
         <section style="padding-top: 120px; padding-bottom: 120px; min-height: 300px; color: #ffffff; background-size: cover; background-repeat: no-repeat; background-image: url('https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjIwOTIyfQ');" id="hero" data-pg-ia-scene='{"dir":"a","s":"custom","s_t":"start","s_s":"end","e_t":"end","e_s":"start","l":[{"a":{"l":[{"t":"","l":[{"t":"tween","p":0,"d":1,"l":{"pgia":{"play":"HideContent"}}},{"t":"tween","p":1,"d":8,"l":{"pgia":{"play":"ShowContent","once":1}}},{"t":"tween","p":9,"d":1,"l":{"pgia":{"play":"HideContent"}}}]}]},"p":"scroll","sc_dir":"up_down","rep":"true"}],"smooth":"0"}' data-pg-ia='{"l":[{"name":"ShowContent","trg":"no","a":{"l":[{"t":"h1,h2,p","l":[{"t":"tween","p":0,"d":1,"s":0.5,"l":{"autoAlpha":1}}]}],"desc":"Customize this animation to show the content when the section comes into view."}},{"name":"HideContent","trg":"no","a":{"l":[{"t":"","l":[]}],"desc":"Customize to hide the content when the section goes out of view. Not needed if you want to reveal the content only once. If hiding content, also remove Show Once in Scroll Scene animation."}}]}' data-pg-ia-apply="$section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="display-3" data-pg-ia-hide>Infinity Resource Pack</h1>
-                        <p class="lead" data-pg-ia-hide>For MC 1.17.1</p>
-                        <p class="lead" data-pg-ia-hide></p>
+                        <h1 class="display-3" data-pg-ia-hide></h1>
+                        <p class="lead" data-pg-ia-hide>Tell us what this page is all about...</p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="section1">
-            <button type="button" class="close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-xl-6">
-                        <h2 data-pg-ia-hide>About</h2>
-                        <p data-pg-ia-hide>Test</p>
-                        <p data-pg-ia-hide></p>
+                    <div class="col-md-6">
+                        <h2 data-pg-ia-hide>Section 1</h2>
+                        <p data-pg-ia-hide>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar faucibus neque, nec rhoncus nunc ultrices sit amet. Curabitur ac sagittis neque, vel egestas est. Aenean elementum, erat at aliquet hendrerit, elit nisl posuere tortor, id suscipit diam dui sed nisi. Morbi sollicitudin massa vel tortor consequat, eget semper nisl fringilla. Maecenas at hendrerit odio. Sed in mi eu quam suscipit bibendum quis at orci. Pellentesque fermentum nisl purus, et iaculis lectus pharetra sit amet.</p>
                     </div>
                 </div>
             </div>
@@ -71,10 +63,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 data-pg-ia-hide>Download</h2>
-                        <p data-pg-ia-hide>Here&apos;s the download button:</p>
-                        <a class="btn btn-outline-dark btn-success" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Download</a>
-                        <p data-pg-ia-hide></p>
+                        <h2 data-pg-ia-hide>Section 2</h2>
+                        <p data-pg-ia-hide>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar faucibus neque, nec rhoncus nunc ultrices sit amet. Curabitur ac sagittis neque, vel egestas est. Aenean elementum, erat at aliquet hendrerit, elit nisl posuere tortor, id suscipit diam dui sed nisi. Morbi sollicitudin massa vel tortor consequat, eget semper nisl fringilla. Maecenas at hendrerit odio. Sed in mi eu quam suscipit bibendum quis at orci. Pellentesque fermentum nisl purus, et iaculis lectus pharetra sit amet.</p>
                     </div>
                 </div>
             </div>
