--- a/_pgbackup/index_1626634182.html
+++ b/_pgbackup/index_1626634182.html
@@ -73,7 +73,7 @@
                     <div class="col-md-6">
                         <h2 data-pg-ia-hide>Download</h2>
                         <p data-pg-ia-hide>Here&apos;s the download button:</p>
-                        <a class="btn btn-outline-dark btn-success" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Download</a>
+                        <a class="btn btn-outline-dark btn-success" href="https://www.youtube.com">Download</a>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
