--- a/_pgbackup/index_1626633976.html
+++ b/_pgbackup/index_1626633976.html
@@ -27,17 +27,20 @@
                             <a class="nav-link" href="#hero" data-pg-ia='{"l":[{"name":"ScrollOnClick","trg":"click","a":{"l":[{"t":"^body","l":[{"t":"tween","p":0,"d":0.59,"l":{"scrollTo":{"dest":"${target.href}"}}},{"t":"tween","p":0,"d":0.59,"l":{"history.push":"${target.href}"},"m":true}]},{"t":"","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MakeActive"}}}]},{"t":"^nav|.active-tile","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MoveTile"}}}]}]},"pdef":"true"},{"name":"MakeActive","trg":"no","a":{"l":[{"t":"^nav|.nav-item.active","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"active"}}]},{"t":"^.nav-item","l":[{"t":"tween","p":0,"d":0.05,"l":{"class.add":"active"}}]},{"t":"this","l":[{"t":"tween","p":0,"d":0.5,"l":{"color":"#f500db"}}],"m":true}]},"rcr":"true"},{"name":"PlayMoveTile","trg":"no","a":{"l":[{"t":"^nav|.active-tile","l":[{"t":"tween","p":0.1,"d":0.4,"l":{"pgia":{"play":"MoveTile"}}}]}]},"rstr":"true"}]}' data-pg-ia-apply="^nav|a[href^=&quot;#&quot;]">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section1" target="_pg_blank">Download</a>
-                            <a class="nav-link" href="#section1" target="_pg_blank"></a>
+                            <a class="nav-link" href="#section1">Section 1</a>
                         </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section2">Section 2</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section3">Section 3</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section4">Section 4</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section5">Section 5</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -62,6 +65,7 @@
                     <div class="col-md-6 col-xl-6">
                         <h2 data-pg-ia-hide>About</h2>
                         <p data-pg-ia-hide>Test</p>
+                        <button type="button" class="btn btn-light">Download</button>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
@@ -73,7 +77,6 @@
                     <div class="col-md-6">
                         <h2 data-pg-ia-hide>Download</h2>
                         <p data-pg-ia-hide>Here&apos;s the download button:</p>
-                        <a class="btn btn-outline-dark btn-success" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Download</a>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
