--- a/_pgbackup/index_1626634182.html
+++ b/_pgbackup/index_1626634182.html
@@ -61,8 +61,7 @@
                 <div class="row">
                     <div class="col-md-6 col-xl-6">
                         <h2 data-pg-ia-hide>About</h2>
-                        <p data-pg-ia-hide>The ResourcePack has a lot of cool features, but it&apos;s still in work.</p>
-                        <p data-pg-ia-hide></p>
+                        <p data-pg-ia-hide>Test</p>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
@@ -74,7 +73,7 @@
                     <div class="col-md-6">
                         <h2 data-pg-ia-hide>Download</h2>
                         <p data-pg-ia-hide>Here&apos;s the download button:</p>
-                        <a class="btn btn-outline-dark btn-success" href="https://www.dropbox.com/s/uihp9lihz8teq47/Infinity.zip?dl=1">Download</a>
+                        <a class="btn btn-outline-dark btn-success" href="https://www.youtube.com">Download</a>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
