--- a/_pgbackup/index_1626633878.html
+++ b/_pgbackup/index_1626633878.html
@@ -27,17 +27,20 @@
                             <a class="nav-link" href="#hero" data-pg-ia='{"l":[{"name":"ScrollOnClick","trg":"click","a":{"l":[{"t":"^body","l":[{"t":"tween","p":0,"d":0.59,"l":{"scrollTo":{"dest":"${target.href}"}}},{"t":"tween","p":0,"d":0.59,"l":{"history.push":"${target.href}"},"m":true}]},{"t":"","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MakeActive"}}}]},{"t":"^nav|.active-tile","l":[{"t":"tween","p":0,"d":0.3,"l":{"pgia":{"play":"MoveTile"}}}]}]},"pdef":"true"},{"name":"MakeActive","trg":"no","a":{"l":[{"t":"^nav|.nav-item.active","l":[{"t":"set","p":0,"d":0,"l":{"class.remove":"active"}}]},{"t":"^.nav-item","l":[{"t":"tween","p":0,"d":0.05,"l":{"class.add":"active"}}]},{"t":"this","l":[{"t":"tween","p":0,"d":0.5,"l":{"color":"#f500db"}}],"m":true}]},"rcr":"true"},{"name":"PlayMoveTile","trg":"no","a":{"l":[{"t":"^nav|.active-tile","l":[{"t":"tween","p":0.1,"d":0.4,"l":{"pgia":{"play":"MoveTile"}}}]}]},"rstr":"true"}]}' data-pg-ia-apply="^nav|a[href^=&quot;#&quot;]">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section1" target="_pg_blank">Download</a>
-                            <a class="nav-link" href="#section1" target="_pg_blank"></a>
+                            <a class="nav-link" href="#section1">Section 1</a>
                         </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section2">Section 2</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section3">Section 3</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section4">Section 4</a>
+                        </li>
                         <li class="nav-item">
-</li>
+                            <a class="nav-link" href="#section5">Section 5</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -54,15 +57,11 @@
             </div>
         </section>
         <section id="section1">
-            <button type="button" class="close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-xl-6">
+                    <div class="col-md-6">
                         <h2 data-pg-ia-hide>About</h2>
-                        <p data-pg-ia-hide>The ResourcePack has a lot of cool features, but it&apos;s still in work.</p>
-                        <p data-pg-ia-hide></p>
+                        <p data-pg-ia-hide>Test</p>
                         <p data-pg-ia-hide></p>
                     </div>
                 </div>
@@ -74,9 +73,16 @@
                     <div class="col-md-6">
                         <h2 data-pg-ia-hide>Download</h2>
                         <p data-pg-ia-hide>Here&apos;s the download button:</p>
-                        <a class="btn btn-outline-dark btn-success" href="https://www.dropbox.com/s/uihp9lihz8teq47/Infinity.zip?dl=1">Download</a>
                         <p data-pg-ia-hide></p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section id="section3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+</div>
                 </div>
             </div>
         </section>
