--- a/_pgbackup/index_1627836251.html
+++ b/_pgbackup/index_1627836251.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>InfinityMC</title>         
+        <title>Blank Template for Bootstrap</title>         
         <!-- Bootstrap core CSS -->         
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
@@ -16,7 +16,7 @@
     <body data-pg-ia-scene='{"smooth":"0","s":"whole","s_t":"top","s_s":"top","e_t":"bottom","e_s":"bottom","pint":"#section4","snap_sel":"section","snap_durmax":"0.5","pag":"e","pag_t":"section","pag_i":"nav .nav-item a","pag_pa":"MakeActive,PlayMoveTile","pag_tc":"55"}' style="padding-top: 55px;"> 
         <header class="bg-white" data-pg-dyn-id="did_0"> 
             <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
-                <a class="navbar-brand" href="#" target="_pg_blank">InfinityMC.gq</a> 
+                <a class="navbar-brand" href="#">My Page</a> 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" data-pg-ia='{"l":[{"name":"PositionTileOnOpen","trg":"click","a":{"l":[{"t":"^nav|.active-tile","l":[{"t":"set","p":0,"d":0,"l":{"autoAlpha":0}},{"t":"tween","p":0.4,"d":0.15,"l":{"pgia":{"play":"MoveTile"}}},{"t":"tween","p":0.55,"d":0.13,"l":{"autoAlpha":1}}]}]},"pdef":"true","rcr":"true"}]}'> 
                     <span class="navbar-toggler-icon"></span> 
                 </button>                 
